--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -30,9 +30,9 @@ jobs:
           terraform init
           terraform plan
           terraform apply -var 'username=${{ secrets.USERNAME }}' -var 'password=${{ secrets.PASSWORD }}' -var 'db_uri=${{ secrets.DB_URI }}' -var 'acm_certificate_arn=${{ secrets.ACM_CERTIFICATE_ARN }}' -var 'newrelicLicense=${{ secrets.NEW_RELIC_LICENSE }}' -auto-approve
-          echo "::set-env name=WEBSITE_BUCKET::$(terraform output website_bucket_id)"
-          echo "::set-env name=APPLICATION_NAME::$(terraform output application_name)"
-          echo "::set-env name=ENVIRONMENT_NAME::$(terraform output environment_name)"
+          echo "WEBSITE_BUCKET=$(terraform output website_bucket_id)" >> $GITHUB_ENV
+	  echo "APPLICATION_NAME=$(terraform output application_name)" >> $GITHUB_ENV
+	  echo "ENVIRONMENT_NAME=$(terraform output environment_name)" >> $GITHUB_ENV
 
       - name: Generate deployment zip
         run: |
