--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Install Yarn
         uses: borales/actions-yarn@v2.1.0
 
-      - name: Install AWS CLI
-        uses: chrislennon/action-aws-cli@v1.1
+      # - name: Install AWS CLI
+      #   uses: chrislennon/action-aws-cli@v1.1
 
       - name: Build Website
         run: |
@@ -62,9 +62,20 @@ jobs:
           yarn install
           yarn build
 
+      # - name: Deploy Website
+      #   env:
+      #     WEBSITE_BUCKET: ${{ env.WEBSITE_BUCKET }}
+      #   run: |
+      #     cd app
+      #     aws s3 sync ./build/ s3://$WEBSITE_BUCKET
+  
       - name: Deploy Website
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
         env:
-          WEBSITE_BUCKET: ${{ env.WEBSITE_BUCKET }}
-        run: |
-          cd app
-          aws s3 sync ./build/ s3://$WEBSITE_BUCKET
+          AWS_S3_BUCKET: ${{ env.WEBSITE_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
+          SOURCE_DIR: 'build'      # optional: defaults to entire repository
