Terraform version change

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,6 +37,8 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 0.13
 
     # - name: Terraform Apply
     #   id: terraform-apply
