--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -55,6 +55,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 0.13
 
       - name: Begin Terraform
         run: |
