--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Begin Terraform
         run: |
           cd infrastructure/dev
+          terraform state replace-provider registry.terraform.io/-/aws hashicorp/aws
           terraform init
           terraform plan
           terraform validate
