--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Build Website
         run: |
-          cd app
+          cd dashboard
           yarn install
           yarn build
 
@@ -78,4 +78,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
-          SOURCE_DIR: './app/build'      # optional: defaults to entire repository
+          SOURCE_DIR: './dashboard/build'      # optional: defaults to entire repository
