build command fix

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           cd dashboard
           npm install
-          npm build
+          npm run build
 
       # - name: Deploy Website
       #   env:
