--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,10 +12,12 @@
     "bootstrap": "^4.6.0",
     "framer-motion": "^3.3.0-beta.22",
     "history": "^5.0.0",
+    "hubspot": "^2.3.14",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-markdown": "^5.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "6.0.0-beta.0",
